create github pages

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">create a site</a></section><section class="header12 cid-r0xjbVxozN mbr-fullscreen" id="header12-7">
+<section class="engine"><a href="https://mobiri.se/x">css templates</a></section><section class="header12 cid-r0xjbVxozN mbr-fullscreen" id="header12-7">
 
     
 
